# cft

./: .gitignore  ADRLog.md  CONTRIBUTING.md  EXPERIMENTS.md  LIMITATIONS.md  PROBLEMS.md  README.md  ROADMAP.md  STATUS.md  THEORIES.md  THEORY_COMPARISON.md  paper.tex  pyproject.toml
.github/workflows/: research.yml
cft/: __init__.py  affinity.py  comparator.py  hypothesis.py  inference.py  interventions.py  simulator.py  tournament.py  visualization.py
cft/integrations/: __init__.py  mirofish.py
cft/theories/: __init__.py  base.py  cft_theory.py  dct.py  gft.py  ict.py  qst.py  tst.py
docs/: explore.html  index.html  style.css
examples/: classroom_scenario.md
notebooks/: mirofish_demo.ipynb  quickstart.ipynb  theory_comparison.ipynb
research/: agent.py  log.md  queue.yaml
src/: theory_framework.py
tests/: conftest.py  test_affinity.py  test_analytical.py  test_base.py  test_cft.py  test_comparator.py  test_dct.py  test_dct_advanced.py  test_gft.py  test_hypothesis.py  test_ict.py  test_inference.py  test_interventions.py  test_mirofish.py  test_qst.py  test_simulator.py  test_tournament.py  test_tst.py  test_visualization.py
tests/fixtures/: actions.jsonl  profiles.jsonl
